Add template update script and integrate into build

--- a/cuenta.html
+++ b/cuenta.html
@@ -100,7 +100,7 @@
   </div>
 
   <!-- Scripts -->
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
+  <script type="module" src="/static/current/js/bundle-auth-nav.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -110,8 +110,8 @@
     });
   </script>
   
-  <script type="module" src="/dist/js/storageUtils.min.js"></script>
-  <script type="module" src="/dist/js/cuenta.min.js"></script>
-  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
+  <script type="module" src="/static/current/js/storageUtils.min.js"></script>
+  <script type="module" src="/static/current/js/cuenta.min.js"></script>
+  <script type="module" src="/static/current/js/sw-register.min.js"></script>
 </body>
 </html>
