--- a/item.html
+++ b/item.html
@@ -96,7 +96,7 @@
           <div id="modal-results" class="item-list"></div>
         </div>
       </div>
-  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle.min.js" defer></script>
   <script>
   document.addEventListener('DOMContentLoaded', function() {
     const openBtn = document.getElementById('open-search-modal');
@@ -104,7 +104,7 @@
     const closeBtn = document.getElementById('close-search-modal');
     openBtn.addEventListener('click', function(e) {
       e.preventDefault();
-      openSearchModal('/dist/js/search-modal.D0pWReq9.min.js');
+      openSearchModal('/static/current/js/search.min.js');
     });
     closeBtn.addEventListener('click', closeSearchModal);
     modal.querySelector('.search-modal-backdrop').addEventListener('click', closeSearchModal);
@@ -114,7 +114,7 @@
   });
   </script>
 
-<script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+<script type="module" src="/static/current/js/bundle.min.js" defer></script>
 <script>
   // Inicializar autenticación cuando el DOM esté listo
   document.addEventListener('DOMContentLoaded', function() {
@@ -124,21 +124,21 @@
   });
 </script>
 
-<script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
-<script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
-<script type="module" src="/dist/js/utils/recipeUtils.min.js" defer></script>
-<script type="module" src="/dist/js/item-mejores.min.js" defer></script>
-<script type="module" src="/dist/js/itemHandlers.min.js" defer></script>
-<script type="module" src="/dist/js/storageUtils.min.js" defer></script>
-<script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
-<script type="module" src="/dist/js/item-ui.min.js" defer></script>
-<script type="module" src="/dist/js/items-core.DMXEDbc5.min.js?v=BsFSl0er" defer></script>
+<script type="module" src="/static/current/js/feedback.min.js" defer></script>
+<script type="module" src="/static/current/js/tabs.min.js" defer></script>
+<script type="module" src="/static/current/js/utils/recipeUtils.min.js" defer></script>
+<script type="module" src="/static/current/js/item.min.js" defer></script>
+<script type="module" src="/static/current/js/itemHandlers.min.js" defer></script>
+<script type="module" src="/static/current/js/storageUtils.min.js" defer></script>
+<script type="module" src="/static/current/js/ui.min.js" defer></script>
+<script type="module" src="/static/current/js/item.min.js" defer></script>
+<script type="module" src="/static/current/js/items.min.js?v=BsFSl0er" defer></script>
 <script type="module">
-  import('/dist/js/services-Bc-4z6yK.js').catch(() =>
-    import('/dist/js/services/recipeService.min.js')
+  import('/static/current/js/services.js').catch(() =>
+    import('/static/current/js/services/recipeService.min.js')
   );
 </script>
-<script type="module" src="/dist/js/item-loader.CPhMCrzV.min.js" defer></script>
+<script type="module" src="/static/current/js/item.min.js" defer></script>
   
   <!-- Inicialización -->
   <script>
@@ -163,6 +163,6 @@
         }
     });
   </script>
-    <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
+    <script type="module" src="/static/current/js/sw.min.js"></script>
 </body>
 </html>
