--- a/leg-craft.html
+++ b/leg-craft.html
@@ -156,10 +156,10 @@
   </div>
   </main>
 
-  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle-utils-1.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle-auth-nav.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.DIH8x-x6.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle-legendary.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -169,9 +169,9 @@
     });
   </script>
   
-  <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
+  <script type="module" src="/static/current/js/tabs.min.js" defer></script>
   
-  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
-  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
+  <script type="module" src="/static/current/js/feedback-modal.min.js" defer></script>
+  <script type="module" src="/static/current/js/sw-register.min.js"></script>
 </body>
 </html>
