--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
         </p>
         <p style="margin-top:20px;"><a href="/">Volver al inicio</a></p>
     </div>
-    <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
+    <script type="module" src="/static/current/js/bundle-auth-nav.min.js"></script>
     <script>
       // Inicializar autenticación cuando el DOM esté listo
       document.addEventListener('DOMContentLoaded', function() {
@@ -80,6 +80,6 @@
         }
       });
     </script>
-  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
+  <script type="module" src="/static/current/js/sw-register.min.js"></script>
 </body>
 </html>
