--- a/mundo-viviente-4.html
+++ b/mundo-viviente-4.html
@@ -73,7 +73,7 @@
       </section>
     </main>
   </div>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
+  <script type="module" src="/static/current/js/bundle-auth-nav.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -83,7 +83,7 @@
     });
   </script>
   
-  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js"></script>
-  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
+  <script type="module" src="/static/current/js/feedback-modal.min.js"></script>
+  <script type="module" src="/static/current/js/sw-register.min.js"></script>
 </body>
 </html>
