--- a/compare-craft.html
+++ b/compare-craft.html
@@ -72,7 +72,7 @@
 
 
   
-  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle-utils-1.min.js" defer></script>
 
   <!-- Modal del Buscador fuera de .container para igualar a index.html -->
   <div id="search-modal" class="search-modal hidden">
@@ -99,7 +99,7 @@
     const closeBtn = document.getElementById('close-search-modal');
     openBtn.addEventListener('click', function(e) {
       e.preventDefault();
-      openSearchModal('/dist/js/search-modal-compare-craft.Ds_WAp9-.min.js');
+      openSearchModal('/static/current/js/search-modal-compare-craft.min.js');
     });
     closeBtn.addEventListener('click', closeSearchModal);
     modal.querySelector('.search-modal-backdrop').addEventListener('click', closeSearchModal);
@@ -109,12 +109,12 @@
   });
   </script>
 
-  <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
-  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
+  <script type="module" src="/static/current/js/tabs.min.js" defer></script>
+  <script type="module" src="/static/current/js/feedback-modal.min.js" defer></script>
   <!-- Nuevos módulos separados -->
-  <script type="module" src="/dist/js/items-core.DMXEDbc5.min.js?v=BsFSl0er" defer></script>
-  <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
-  <script type="module" src="/dist/js/compare-ui.min.js" defer></script>
+  <script type="module" src="/static/current/js/items-core.min.js?v=BsFSl0er" defer></script>
+  <script type="module" src="/static/current/js/ui-helpers.min.js" defer></script>
+  <script type="module" src="/static/current/js/compare-ui.min.js" defer></script>
 
   <script>
   // Override global de selectItem para integración con el modal en compare-craft
@@ -143,7 +143,7 @@
 };
 
   </script>
-<script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+<script type="module" src="/static/current/js/bundle-auth-nav.min.js" defer></script>
 <script>
   // Inicializar autenticación cuando el DOM esté listo
   document.addEventListener('DOMContentLoaded', function() {
@@ -153,9 +153,9 @@
   });
 </script>
 
-<script type="module" src="/dist/js/storageUtils.min.js" defer></script>
+<script type="module" src="/static/current/js/storageUtils.min.js" defer></script>
 <!-- Manejadores de comparativa (guardar comparativa) -->
-<script type="module" src="/dist/js/compareHandlers.min.js" defer></script>
+<script type="module" src="/static/current/js/compareHandlers.min.js" defer></script>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     if (window.comparativa &&
@@ -164,6 +164,6 @@
     }
   });
 </script>
-  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
+  <script type="module" src="/static/current/js/sw-register.min.js"></script>
 </body>
 </html>
