--- a/dones.html
+++ b/dones.html
@@ -113,12 +113,12 @@
     </main>
   </div>
 
-  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-dones.B6LmXL3c.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle-utils-1.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle-dones.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.DIH8x-x6.min.js" defer></script>
-  <script type="module" src="/dist/js/dones.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle-legendary.min.js" defer></script>
+  <script type="module" src="/static/current/js/dones.min.js" defer></script>
+  <script type="module" src="/static/current/js/bundle-auth-nav.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -131,8 +131,8 @@
   <script type="module">
     window.addEventListener('DOMContentLoaded', async () => {
       try {
-        await import('/dist/js/feedback-modal.BaGBwUid.min.js');
-        await import('/dist/js/sw-register.Wot8iBZe.min.js');
+        await import('/static/current/js/feedback-modal.min.js');
+        await import('/static/current/js/sw-register.min.js');
       } catch (e) {
         console.error('Error loading optional modules', e);
       }
